--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-styled-components": "^2.0.11",
     "styled-components": "^3.3.2"
+  },
+  "devDependencies": {
+    "prettier": "1.13.4"
   }
 }
