--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "description": "Gatsby hello world starter",
   "license": "MIT",
   "scripts": {
+    "precommit": "lint-staged",
     "develop": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve"
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --no-semi --single-quote --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "gatsby": "^1.9.250",
@@ -14,6 +21,8 @@
     "styled-components": "^3.3.2"
   },
   "devDependencies": {
+    "husky": "^0.14.3",
+    "lint-staged": "^7.1.3",
     "prettier": "1.13.4"
   }
 }
