--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   "dependencies": {
     "gatsby": "^1.9.250",
     "gatsby-link": "^1.6.40",
+    "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-styled-components": "^2.0.11",
-    "styled-components": "^3.3.2"
+    "gatsby-plugin-typography": "^1.7.19",
+    "react-helmet": "^5.2.0",
+    "styled-components": "^3.3.2",
+    "styled-reset": "^1.3.5",
+    "typography-theme-noriega": "^0.15.10"
   },
   "devDependencies": {
     "husky": "^0.14.3",
